Wall Oven Q2 Sizing and Spacing Fixes

--- a/app/scss/brands/maytag/_answers.scss
+++ b/app/scss/brands/maytag/_answers.scss
@@ -362,7 +362,7 @@
 			display: block;
 			width: 277px;
 			height: 50px;
-			background: url('../img/boxes-picture-4-bg-bottom.png');
+			background: url('../img/boxes-picture-bg-bottom.png');
 			@include boxshadow;
 		}
 		.select-icon {
